<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calorimetry.cacl2.questions.CalorimetryCacl2Q1">

    <ImageView
        android:id="@+id/backgroundIMG"
        android:layout_width="5000dp"
        android:layout_height="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/yellowRect"
        android:layout_width="600dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/yellowrectangle" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorimetry_calcium_chloride"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/yellowRect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yellowRect"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_1_out_of_4"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="@+id/yellowRect"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/q1Text"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/q1"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/q1"
        app:layout_constraintTop_toBottomOf="@+id/q1" />

    <EditText
        android:id="@+id/q1answer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/exothermic_endothermic"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/q1Text"
        app:layout_constraintStart_toStartOf="@+id/q1Text"
        app:layout_constraintTop_toBottomOf="@+id/q1Text"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q1answer" />

    <Button
        android:id="@+id/datatable"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_data_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/x" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="129dp"
        android:layout_height="122dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:srcCompat="@drawable/check" />

    <ImageView
        android:id="@+id/x"
        android:layout_width="129dp"
        android:layout_height="121dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:srcCompat="@drawable/x" />

    <Button
        android:id="@+id/next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check"
        app:layout_constraintVertical_bias="0.392" />
</androidx.constraintlayout.widget.ConstraintLayout>